Updated running.html w.r.t. "Start in:" usage. (bug 18317)

--- a/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
@@ -27,21 +27,29 @@ workspace rather than using the default. There are two ways to control the
 location of your workspace: using the current working directory or using the
 -data command line argument.</p>
 
-<p>Perhaps the easiest way of using the current working directory is to create a
-shortcut using the following steps</p>
+<h3>Setting the workspace location to be inside the current working directory</h3>
+
+<p>In this scenario, the workspace location will be a directory called <samp>workspace</samp>
+inside the current working directory.</p>
+
+<p>Perhaps the easiest way of doing this is to create a
+shortcut using the following steps:</p>
 
 <ol>
   <li>Navigate to eclipse.exe in the Windows Explorer and using a right button drag, create a shortcut
     to eclipse.exe.</li>
   <li>Edit the properties of the shortcut such that the <b>Start in:</b>
-    field identifies the location of your workspace (for example, c:\myworkspace).</li>
-  <li>Close the properties dialog and double-click on the shortcut.</li>
+    field identifies the parent directory of your workspace location (for example, <samp>c:\users\robert</samp>).</li>
+  <li>Close the properties dialog and double-click on the shortcut (if the provided directory was <samp>c:\users\robert</samp>, 
+  the workspace location would be <samp>c:\users\robert\workspace</samp>).</li>
 </ol>
 <p>Of course you can get the same effect using a command prompt by changing
-directory to your workspace directory and then running eclipse.exe.</p>
+directory to your workspace parent's directory and then running eclipse.exe.</p>
+
+<h3>Setting a specific location for the workspace with -data</h3>
 
 <p>To use the -data command line argument, simply add <code>-data <var>your_workspace_location</var></code>
- (for example, <code>-data c:\myworkspace</code>)
+ (for example, <code>-data c:\users\robert\myworkspace</code>)
 to the <b>Target</b> field in the shortcut properties, or include it explicitly on your
 command line.</p>
 
@@ -340,5 +348,5 @@ to make more heap available. For example, the following setting will allow the J
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
 
-</body>
+</h3></body>
 </html>
