*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_exportWizards.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_exportWizards.htm
@@ -16,7 +16,7 @@ org.eclipse.ui.exportWizards
 <H3>
 org.eclipse.ui.exportWizards</H3>
 <P >
-You can add a wizard to the <b> File-&gt;Export</b> menu option in the workbench using the
+You can add a wizard to the <b> File &gt; Export</b> menu option in the workbench using the
 <a href="../reference/extension-points/org_eclipse_ui_exportWizards.html"><b> org.eclipse.ui.exportWizards</b></a> extension point. The process for defining the extension and implementing the wizard is similar to&nbsp;
 <b><a href="../reference/extension-points/org_eclipse_ui_newWizards.html">org.eclipse.ui.newWizards</a></b>.&nbsp;
 The primary difference in the markup is that export wizards do not define or
