--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_importWizards.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_importWizards.htm
@@ -15,7 +15,7 @@
 <H3>
 org.eclipse.ui.importWizards</H3>
 <P >
-You can add a wizard to the <b> File-&gt;Import</b> menu option in the workbench using the
+You can add a wizard to the <b> File &gt; Import</b> menu option in the workbench using the
 <a href="../reference/extension-points/org_eclipse_ui_importWizards.html"> <b> org.eclipse.ui.importWizards</b></a> extension point. The process for defining the extension and implementing the wizard is similar to
 <b><a href="../reference/extension-points/org_eclipse_ui_newWizards.html">org.eclipse.ui.newWizards</a></b>.&nbsp;
 The primary difference in the markup is that import wizards do not define or
