--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_newWizards.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_newWizards.htm
@@ -16,7 +16,7 @@ org.eclipse.ui.newWizards
 <H3>
 org.eclipse.ui.newWizards</H3>
 <P >
-You can add a wizard to the <b> File-&gt;New-&gt;Examples... </b> menu option in the workbench using the
+You can add a wizard to the <b> File &gt; New &gt; </b>menu options in the workbench using the
 <a href="../reference/extension-points/org_eclipse_ui_newWizards.html"><b> org.eclipse.ui.newWizards</b></a> extension point. The readme
 tool example uses this extension point definition to add the Readme File wizard:</P>
 <font color='#4444CC'><pre>
@@ -38,20 +38,36 @@ tool example uses this extension point definition to add the Readme File wizard:
 	&lt;/wizard&gt;
 &lt;/extension&gt;
 </pre></font>
+<P >The <b>category</b> describes the grouping for the wizard.&nbsp; An optional
+<b>parentCategory</b>  establishes the new category as a child of an existing
+category.&nbsp;&nbsp;
+<P > Top level categories will appear in the <b> File &gt; New </b>menu.&nbsp;
+In this example, the <b>parentCategory</b> is set to an &quot;Examples&quot;
+category.&nbsp; Where did the parent category come from?&nbsp; The <b>org.eclipse.ui
+</b>plug-in defines a standard examples category in its markup:<font color='#4444CC'><pre>&lt;extension
+        point=&quot;org.eclipse.ui.newWizards&quot;&gt;
+    &lt;category
+          name=&quot;%NewWizards.Category.Examples&quot;
+          id=&quot;org.eclipse.ui.Examples&quot;&gt;
+    &lt;/category&gt;
+    ...</font></pre>
+<P >This category appears in the <b> File &gt; New </b> menu.</P>
 <P >
-The <b> category</b> describes where the wizard will be grouped when the <b>New
-Example</b> wizard shows the available wizards.&nbsp; The category
-<b> name</b> 
- defines the label that is used in the list on the left hand side of the New
-Example wizard.&nbsp; The wizard itself is
-assigned to the category.&nbsp;&nbsp; Its <b>name</b> and <b>icon</b> are shown
+<img border="0" alt="New menu with Examples category" src="images/newwizardmenu.jpg" width="129" height="143"></P>
+<P >
+&nbsp;</P>
+<P >
+The readme tool's category <b>name</b> 
+ defines the label that is used for the next layer of grouping underneath the
+parent category.&nbsp; These categories are shown on the left hand side of the <b>New
+Example</b> wizard.&nbsp; The wizard's <b>name</b> and <b>icon</b> are shown
 on the right hand side of the wizard when you click on the category.&nbsp; The <b>description</b> 
 of the wizard is shown at the top of the wizard when you select it in the right
 hand list as shown below:</P>
 <P >
 <img border="0" src="images/newwizardlist.jpg" width="500" height="500" alt="New example wizard with readme entries"></P>
 <P >
-All of this appears based on the markup in the <b>plugin.xml
+This information about the wizard appears solely because of the markup in the <b>plugin.xml
 </b>file.&nbsp; None of the plug-in code runs
 until the user chooses the <b>Next</b> button.&nbsp; Once this happens, the
 workbench will instantiate the wizard <b>class</b>
