--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_extensions.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_extensions.htm
@@ -15,11 +15,14 @@
 <h2>
 Workbench wizard extension points</h2>
 <P >
-The workbench defines extension points for wizards that create new resources, import resources, or export resources. When you select the new, import, or export menu, the workbench uses a wizard
-selection dialog to display all the wizards that have been contributed for that particular extension point.&nbsp;
-The new wizard dialog is shown below.</P>
+The workbench defines extension points for wizards that create new resources, import resources, or export resources.&nbsp;</P>
 <P >
-<img border="0" src="images/newwizardlist.jpg" width="500" height="500" alt="New wizard dialog with selection list"></P>
+ When you make selections in the new, import, or export menu, the workbench uses
+various wizard
+selection dialogs to display all the wizards that have been contributed for that particular extension point.&nbsp;
+The import wizard dialog is shown below.</P>
+<P >
+<img border="0" src="images/importwizard.jpg" width="470" height="550" alt="Import wizard dialog with selection list"></P>
 <P >
 Your wizard takes control once it is selected in the list and the <b> Next</b> button is pressed. This is when your first page becomes visible.&nbsp;</P>
 
