New search API incompatibility note; new know problem with AIX

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -416,9 +416,16 @@ etc., this change should not affect existing clients. (bug <a href="http://dev.e
 <p>None.</p>
 <h3>Platform - Debug</h3>
 <p>None.</p>
-<h3>Platform - Text</h3>
-<p>[TBD]</p>
 <h3>Platform - Search</h3>
+<h4>Inexact matching</h4>
+<p>There is a new preference setting that controls whether the search engine
+should report inexact matches. The user can set this via the <b>Workbench &gt;
+Search </b>preference page. The new API method <code>SearchUI.arePotentialMatchesIgnored</code>
+should be used to query the preference setting. Existing clients that contribute
+particular search engine (or search page) should consider whether the notion of
+an inexact match is meaningful in their particular context, and honor this
+preference if it is. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=20663">20663</a>)</p>
+<h3>Platform - Text</h3>
 <p>[TBD]</p>
 <h3>Platform - Compare</h3>
 <p>[TBD]</p>
@@ -821,6 +828,10 @@ limitation of the Open Motif library. (bug <a href="http://dev.eclipse.org/bugs/
 <p>There are reports of hangs opening a font or color dialog on early access
 1.4.1 Mac OS X Java VMs. These problems do not occur with the officially
 released J2SE 1.3.1 for Mac OS X 10.2. (bug <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=30021">30021</a>)</p>
+<h4>Crash when attempting to launch file browser (AIX Motif only)</h4>
+<p>There is a known AIX graphics bug affecting certain levels of AIX releases.
+Ensure that the AIX installed includes the necessary service updates as
+described in an attachment to the Eclipse bug report. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=34524">34524</a>)</p>
 <b>
 <p><font color="#00FF00">Available colors on 8-bit Linux (Linux only)</font></p>
 </b>
