Use "/" in commands and preferences rather than ">"

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
+
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -42,7 +43,7 @@ and Tricks.]</p>
   <tr>
     <td width="30%" valign="top" align="right"><b>User customizable<br>
       key bindings</b></td>
-    <td width="70%" valign="top" align="left">The preference (<b>Workbench /
+    <td width="70%" valign="top" align="left">The preference (<b>Workbench &gt;
       Keys</b>) for customizing key bindings (one of our high priority items for
       Eclipse 2.1) has been completely reworked.</td>
   </tr>
@@ -60,7 +61,7 @@ and Tricks.]</p>
     <td width="30%" valign="top" align="right"><b>CVS Watch/Edit</b></td>
     <td width="70%" valign="top" align="left">The &quot;edit&quot; portion of
       CVS Watch/Edit is now supported within Eclipse. Through settings on the <b>Team
-      / CVS / Watch/Edit</b> preference page (which must be set before the
+      &gt; CVS &gt; Watch/Edit</b> preference page (which must be set before the
       projects are added to your workspace), you can choose to automatically
       notify the CVS server whenever you start to edit a file. In turn, the CVS
       server will notify others on the watch list for that file. When you go to
@@ -93,7 +94,7 @@ and Tricks.]</p>
       <p>Views can support this by providing a ResourceTransfer, a
       MarkerTransfer or an EditorInputTransfer in their drag source event
       handler. See the documentation for these classes under Platform Plug-in
-      Developer Guide / API Reference / Workbench / org.eclipse.ui.part.</p>
+      Developer Guide &gt; API Reference &gt; Workbench &gt; org.eclipse.ui.part.</p>
     </td>
   </tr>
   <tr>
@@ -167,7 +168,7 @@ and Tricks.]</p>
     <td width="30%" valign="top" align="right"><b>Like to start afresh each
       session?</b></td>
     <td width="70%" valign="top" align="left">There is a new preference (<b>Workbench
-      / Editors</b>) to automatically close all open editors before exiting
+      &gt; Editors</b>) to automatically close all open editors before exiting
       Eclipse.</td>
   </tr>
   <tr>
@@ -181,7 +182,7 @@ and Tricks.]</p>
     <td width="30%" valign="top" align="right"><b>Support for custom help
       browsers</b></td>
     <td width="70%" valign="top" align="left">There is a new preference (<b>Workbench
-      / Help</b>) that allows you to configure a custom help browser.</td>
+      &gt; Help</b>) that allows you to configure a custom help browser.</td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>CVS now supports working sets</b></td>
