--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -36,7 +36,7 @@ size throughout.]</p>
     <td width="30%" valign="top" align="right"><b>User customizable<br>
       key bindings</b></td>
     <td width="70%" valign="top" align="left">You can now customize key bindings
-      using <b>Workbench / Keys</b> preference page. Emacs users will find a
+      using <b>Workbench &gt; Keys</b> preference page. Emacs users will find a
       predefined set of key bindings awaiting them.
       <p><img border="0" src="images/key-bindings.gif" width="460" height="345"></p>
     </td>
@@ -56,7 +56,7 @@ size throughout.]</p>
     <td width="70%" valign="top" align="left">The default text editor now
       supports line numbers, cursor-line highlighting, print margin, annotation
       highlighting, and an overview ruler. All of these can be configured from
-      the <b>Workbench / Editors / Text Editor</b> preference page.
+      the <b>Workbench &gt; Editors &gt; Text Editor</b> preference page.
       <p align="center"><img border="0" src="images/text-editor.gif" width="250" height="338"></p>
     </td>
   </tr>
@@ -112,11 +112,12 @@ size throughout.]</p>
       workspace project are laid out in the local file system. When creating a
       folder (or file), you can link it to an existing location in the file
       system outside of the workspace. This is done using the Advanced section
-      on the New Folder (and New File) wizards. These 
-      <a href="../concepts/concepts-13.htm">linked resources</a>
-      are useful for integrating with external libraries or source code directories that 
-      cannot readily be copied into an Eclipse workspace.
+      on the New Folder (and New File) wizards. These <a href="../concepts/concepts-13.htm">linked
+      resources</a> are useful for integrating with external libraries or source
+      code directories that cannot readily be copied into an Eclipse workspace.
   </tr>
 </table>
+
 </body>
+
 </html>
